<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Detail.InformasiUmumDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/tanggalDetailInformasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:text="@string/tanggal_informasi_detail"
            android:textColor="@color/graylight" />

    </LinearLayout>

    <TextView
        android:textColor="@color/colorPrimary"
        android:id="@+id/namaDetailInformasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/nama_informasi_detail"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/isiDetailInformasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/isi_informasi_detail"
            android:textSize="15sp" />

    </ScrollView>

</LinearLayout>