<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/rowNamaInformasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_informasi"
                android:padding="8dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rowIsiInformasi"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/isi_informasi"
                android:padding="8dp"
                android:layout_below="@+id/rowNamaInformasi"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/rowTanggalBuatInformasi"
                android:layout_width="150dp"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/rowIsiInformasi"
                android:layout_toStartOf="@+id/rowIsiInformasi"
                android:layout_below="@+id/rowNamaInformasi"
                android:textSize="13sp"
                android:text="@string/tanggal_informasi"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>